2004-04-30  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.1 ===

2004-04-13  Matthias Clasen  <mclasen@redhat.com>

	* io-ani.c (gdk_pixbuf__ani_image_load_animation): 
	* gdk-pixbuf-io.c (gdk_pixbuf_get_file_info) 
	(_gdk_pixbuf_generic_image_load) 
	(gdk_pixbuf_new_from_file_at_size): When calling fread()
	in a loop, check for ferror() as well as for feof() to
	avoid infinite loops on directories.  (#137804, Alex Converse)

Mon Mar 15 15:01:59 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.4.0 ===

2004-03-15  Tor Lillqvist  <tml@iki.fi>

	* queryloaders.c (main): [Win32] Look up installation prefix at
	run-time, replace prefix in PIXBUF_LIBDIR with that. (#106141)

	Merges from stable branch that had been left out. (#136282, J. Ali
	Harlow):

	Changes for run-time lookup of installation location on Win32:
	
	* Makefile.am (INCLUDES): Define GTK_PREFIX as $(prefix).

	* gdk-pixbuf-io.c (get_sysconfdir): New function, look up
	installation location at runtime and deduce GTK_SYSCONFDIR
	from it.
	(get_toplevel): Similar, for the top-level installation directory.
	(correct_prefix): Replace compile-time prefix with run-time
	prefix.
	(get_libdir): Remove, not used any longer.
	(gdk_pixbuf_io_init): Call correct_prefix() on Win32.

	* queryloaders.c (query_module): [Win32] Change backslahses into
	slashes in path.

Tue Mar  9 09:33:28 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.6 ===

2004-03-05  Tor Lillqvist  <tml@iki.fi>

	* gdk_pixbuf.def: Add missing entries. Thanks to J. Ali Harlow.

Fri Mar  5 22:22:25 2004  Matthias Clasen  <maclas@gmx.de>

	* io-bmp.c (OneLine32): Don't try to load an alpha channel
	from the BMP, since there is no evidence that even 32bit
	BMPs have an alpha channel.  (#135502)

Mon Mar  1 19:47:48 2004  Owen Taylor  <otaylor@redhat.com>

	 * === Released 2.3.5 ====

2004-02-28  Hans Breuer  <hans@breuer.org>

	* io-tiff.c : include <io.h> for lseek()
	* io-xbm.c : use HAVE_UNISTD_H
