@@ -72,13 +72,13 @@ gdk_pixbuf_scale (const GdkPixbuf *src,
   offset_x = floor (offset_x + 0.5);
   offset_y = floor (offset_y + 0.5);
   
-  pixops_scale (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
-		dest_x - offset_x, dest_y - offset_y, 
-		dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
-		dest->rowstride, dest->n_channels, dest->has_alpha,
-		src->pixels, src->width, src->height,
-		src->rowstride, src->n_channels, src->has_alpha,
-		scale_x, scale_y, (PixopsInterpType)interp_type);
+  _pixops_scale (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
+		 dest_x - offset_x, dest_y - offset_y, 
+		 dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
+		 dest->rowstride, dest->n_channels, dest->has_alpha,
+		 src->pixels, src->width, src->height,
+		 src->rowstride, src->n_channels, src->has_alpha,
+		 scale_x, scale_y, (PixopsInterpType)interp_type);
 }
 
 /**
@@ -123,13 +123,13 @@ gdk_pixbuf_composite (const GdkPixbuf *src,
 
   offset_x = floor (offset_x + 0.5);
   offset_y = floor (offset_y + 0.5);
-  pixops_composite (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
-		    dest_x - offset_x, dest_y - offset_y, 
-		    dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
-		    dest->rowstride, dest->n_channels, dest->has_alpha,
-		    src->pixels, src->width, src->height,
-		    src->rowstride, src->n_channels, src->has_alpha,
-		    scale_x, scale_y, (PixopsInterpType)interp_type, overall_alpha);
+  _pixops_composite (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
+		     dest_x - offset_x, dest_y - offset_y, 
+		     dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
+		     dest->rowstride, dest->n_channels, dest->has_alpha,
+		     src->pixels, src->width, src->height,
+		     src->rowstride, src->n_channels, src->has_alpha,
+		     scale_x, scale_y, (PixopsInterpType)interp_type, overall_alpha);
 }
 
 /**
@@ -191,14 +191,14 @@ gdk_pixbuf_composite_color (const GdkPixbuf *src,
   offset_x = floor (offset_x + 0.5);
   offset_y = floor (offset_y + 0.5);
   
-  pixops_composite_color (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
-			  dest_x - offset_x, dest_y - offset_y, 
-			  dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
-			  dest->rowstride, dest->n_channels, dest->has_alpha,
-			  src->pixels, src->width, src->height,
-			  src->rowstride, src->n_channels, src->has_alpha,
-			  scale_x, scale_y, (PixopsInterpType)interp_type, overall_alpha, check_x, check_y,
-			  check_size, color1, color2);
+  _pixops_composite_color (dest->pixels + dest_y * dest->rowstride + dest_x * dest->n_channels,
+			   dest_x - offset_x, dest_y - offset_y, 
+			   dest_x + dest_width - offset_x, dest_y + dest_height - offset_y,
+			   dest->rowstride, dest->n_channels, dest->has_alpha,
+			   src->pixels, src->width, src->height,
+			   src->rowstride, src->n_channels, src->has_alpha,
+			   scale_x, scale_y, (PixopsInterpType)interp_type, overall_alpha, check_x, check_y,
+			   check_size, color1, color2);
 }
 
 /**
