@@ -1,3 +1,11 @@
+2004-05-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* pixops/timescale.c: 
+	* pixops/pixops.c: 
+	* pixops/pixops.h: 
+	* gdk-pixbuf-scale.c: _-prefix the nonstatic pixops_... 
+	functions.  (#142233, Morten Welinder)
+
 2004-04-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.1 ===
